k8s/app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jogo
  namespace: outrojogo
  labels:
    app: jogo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jogo
  template:
      metadata:
        labels:
          app: jogo
      spec:
        containers:
          - name: jogo
            image: jogokubernetes:latest
            imagePullPolicy: Never
            ports:
              - containerPort: 8080
                name: http
            livenessProbe:
              httpGet:
                path: /app/actuator/health/liveness
                port: 8080
              initialDelaySeconds: 30
            readinessProbe:
              httpGet:
                path: /app/actuator/health/readiness
                port: 8080
              initialDelaySeconds: 30
