k8s/app/app-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: jogo
  namespace: jogo
spec:
  selector:
    app: jogo
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
