k8s/app/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jogo
  namespace: jogo
spec:
  rules:
    - host: dev.local
      http:
        paths:
          - path: /app
            backend:
              serviceName: jogo
              servicePort: 8080
